src/objects/Asset_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Assets Issued</relationshipLabel>
        <relationshipName>Assets_Issued</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets Issued</relationshipLabel>
        <relationshipName>Assets_Issued</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Return_Date__c</fullName>
        <label>Expected Return Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_Issued_Updated__c</fullName>
        <formula>Quantity__c  -  Quantity_Returned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Issued Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned__c</fullName>
        <label>Quantity Returned</label>
        <summarizedField>Asset_Returned__c.Quantity__c</summarizedField>
        <summaryForeignKey>Asset_Returned__c.Expected_Return_Date__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <label>Asset Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Asset Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets Issued</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invalid_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity cannot be zero or less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Return_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Expected_Return_Date__c  &lt;  Issue_Date__c</errorConditionFormula>
        <errorDisplayField>Expected_Return_Date__c</errorDisplayField>
        <errorMessage>Return date should be greater or equal to issue date</errorMessage>
    </validationRules>
</CustomObject>